--- a/android-Camera2Basic/app/build.gradle
+++ b/android-Camera2Basic/app/build.gradle
@@ -6,7 +6,7 @@ apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion '26.0.2'
+    buildToolsVersion '28.0.3'
     defaultConfig {
         applicationId "com.example.android.camera2basic"
         minSdkVersion 21
@@ -27,8 +27,8 @@ android {
 
 dependencies {
     implementation "com.android.support:appcompat-v7:26.1.0"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
-    implementation 'org.tensorflow:tensorflow-lite:1.10.0'
-    implementation 'org.tensorflow:tensorflow-android:1.11.0'
+    implementation 'org.tensorflow:tensorflow-lite:1.12.0'
+    implementation 'org.tensorflow:tensorflow-android:1.12.0'
 }
